policies/privileged-container.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: privileged-container
spec:
  categories:
  - Docker CIS
  - Privileges
  criteriaLocked: true
  description: Alert on deployments with containers running in privileged mode
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment splunkforwarder-ds in namespace openshift-security
    deployment:
      name: splunkforwarder-ds
      scope:
        cluster: ''
        namespace: openshift-security
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment mdsd in namespace openshift-azure-logging
    deployment:
      name: mdsd
      scope:
        cluster: ''
        namespace: openshift-azure-logging
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment audit-exporter in namespace openshift-security
    deployment:
      name: audit-exporter
      scope:
        cluster: ''
        namespace: openshift-security
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment apiserver in namespace openshift-oauth-apiserver
    deployment:
      name: apiserver
      scope:
        cluster: ''
        namespace: openshift-oauth-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ovnkube-node in namespace openshift-ovn-kubernetes
    deployment:
      name: ovnkube-node
      scope:
        cluster: ''
        namespace: openshift-ovn-kubernetes
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment oauth-openshift in namespace openshift-authentication
    deployment:
      name: oauth-openshift
      scope:
        cluster: ''
        namespace: openshift-authentication
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multus-additional-cni-plugins in namespace openshift-multus
    deployment:
      name: multus-additional-cni-plugins
      scope:
        cluster: ''
        namespace: openshift-multus
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multus in namespace openshift-multus
    deployment:
      name: multus
      scope:
        cluster: ''
        namespace: openshift-multus
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment node-ca in namespace openshift-image-registry
    deployment:
      name: node-ca
      scope:
        cluster: ''
        namespace: openshift-image-registry
        label: null
    image: null
    expiration: null
  - name: Don't alert on the stackrox namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on kube-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: kube-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on istio-system namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: istio-system
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-node namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-node
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-sdn namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-sdn
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-kube-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-kube-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-etcd namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-etcd
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-apiserver namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-apiserver
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-dns namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-dns
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-node-tuning-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-node-tuning-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-cluster-csi-drivers namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-cluster-csi-drivers
        label: null
    image: null
    expiration: null
  - name: Don't alert on openshift-machine-config-operator namespace
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: openshift-machine-config-operator
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment coredns-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: coredns-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment haproxy-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: haproxy-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment keepalived-ci-ln-*-master-\d+ in namespace openshift-vsphere-infra
    deployment:
      name: keepalived-ci-ln-.*-master-\d+
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployments coredns-ci-ln-*-worker-* in namespace openshift-vsphere-infra
    deployment:
      name: coredns-ci-ln-.*-worker-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployments keepalived-ci-ln-*-worker-* in namespace openshift-vsphere-infra
    deployment:
      name: keepalived-ci-ln-.*-worker-.*
      scope:
        cluster: ''
        namespace: openshift-vsphere-infra
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Privileged Container
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Privileged Container
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  rationale: Containers running as privileged represent greater post-exploitation
    risk by allowing an attacker to access all host devices, run a daemon in the container,
    etc.
  remediation: Verify that privileged capabilities are required and cannot be provided
    with a subset of other controls.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
